# TuringResearch_plus

./: .env.example  .gitignore  .mcp.example.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README_CN.md  SECURITY.md  pyproject.toml  turingresearch_restore_architecture_diagram.patch
.agents/: ENTRY.md  MARKETPLACE.md  ROUTING_TABLE.md  SKILL_POLICY.md
.codex/: config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_proposal.md  research_case_request.md  research_workflow_request.md  security_privacy_report.md
.github/workflows/: ci.yml  docs-check.yml  docs-pages-dry-run.yml  lint.yml  privacy-gate.yml  release-artifact-dry-run.yml  test.yml
assets/demo_gif/: DEMO_GIF_SCRIPT.md
assets/screenshots/: SCREENSHOT_MANIFEST.yaml  SCREENSHOT_TODO.md
community/: CONTRIBUTOR_GUIDE.md  README.md  REVIEW_POLICY.md  intake-log.md
community/ideas/: README.md  _template.md
contracts/: advisor_export.yaml  advisor_pack.yaml  advisor_pdf_export.yaml  advisor_pptx_export.yaml  apify_adapter.yaml  architecture_diagram.yaml  artifact_api.yaml  artifact_audit.yaml  artifact_schema.yaml  benchmark_replay.yaml  campaign_catalog.yaml  campaign_execution_trace.yaml  case_api.yaml  case_study_builder.yaml  citation_graph.yaml  cloud_object_artifact_index.yaml  collision_risk.yaml  context_pack_builder_runtime.yaml  convergence_decision_report.yaml  core_api.yaml  core_tools.yaml  cross_platform_archive_hardening.yaml  cross_project_evidence_graph.yaml  dashboard_api.yaml  dashboard_data_api.yaml  dashboard_refinement.yaml  dataset_license_compliance.yaml  docs_site_build_hardening.yaml  docs_site_builder.yaml  error_schema.yaml  experiment_api.yaml  experiment_route.yaml  experiment_section_builder.yaml  export_quality_gate.yaml  extension_safety.yaml  failure_taxonomy.yaml  fusion_workflows.yaml  git_context_handoff.yaml  github_artifact_sync.yaml  handoff_bundle.yaml  (+69 more)
docs/: PROJECT_MANUAL.md  PROJECT_MANUAL_CN.md  README.md  advisor-export-guide.md  advisor-export-plan.md  advisor-markdown-bundle.md  advisor-pack-builder.md  advisor-pdf-pptx-export.md  advisor-real-pdf-export.md  advisor-real-pptx-export.md  already-implemented-vs-upstream.md  api-freeze-v0.1.0.md  api-key-policy.md  apify-adapter-plan.md  apify-adapter.md  apify-fake-live-integration-report.md  apify-usage-guide.md  apify-workflow-templates.md  architecture-diagram-final.mmd  architecture.md  architecture_16box.md  architecture_16box.mmd  aris-adoption-non-goals.md  aris-deferral-decision.md  aris-feature-backlog.md  aris-implementation-blocklist-v1.3.md  aris-reference-only-policy.md  aris-still-deferred-v1.3.md  aris-still-deferred-v1.4.md  aris-vs-turingresearch-positioning.md  artifact-auditor.md  benchmark-replay-suite.md  cached-paper-content-policy.md  campaign-execution-trace.md  campaign-preconditions.md  campaign-routing-table.md  campaign-to-skill-map.md  campaign-trace-e2e.md  capability-index.md  case-study-gallery.md  (+1024 more)
docs-site/: README.md  build_report.md  deployment_dry_run_report.md  dist_manifest.yaml  release_bundle_manifest.yaml  release_bundle_report.md  site_manifest.yaml
examples/: README.md
lanes/: 00_master_ledger.md  01_architecture_contracts.md  02_core_reproduction.md  03_pdf_markdown.md  04_yogsoth_fusion.md  05_vault_memory.md  06_workflow_orchestration.md  07_race_mode.md  08_paper_pipeline.md  09_qa_release.md  100_paper_assembly_gate.md  101_benchmark_replay_suite.md  102_quality_regression_gate.md  103_v0.6_full_replay_regression.md  104_v0.6_docs_consolidation.md  105_v0.6_rc_gate.md  106_v0.6_release_prep.md  107_v0.7_roadmap_public_strategy.md  108_v0.7_scope_lock.md  109_trusted_local_plugin_loading.md  10_release_candidate.md  110_plugin_sandbox_policy.md  111_plugin_compatibility_harness.md  112_mcp_distribution_polish.md  113_v0.7_plugin_system_integration.md  114_dashboard_refinement.md  115_advisor_pdf_export.md  116_advisor_pptx_export.md  117_export_quality_gate.md  118_dashboard_export_integration.md  119_dataset_license_compliance.md  11_skills_lockdown.md  120_local_research_vault_ui.md  121_paper_deep_review_mode.md  122_vggt_public_case_study.md  123_public_demo_expansion.md  124_vault_compliance_case_study_integration.md  125_v0.7_full_replay.md  126_public_release_rc_gate.md  127_docs_readme_final_hardening.md  (+349 more)
paper/: docflow.mmd  figure_index.md  paper_asset_registry.yaml
race/: priority_board.md
split_ready/: SPLIT_SYNC_POLICY.md  split_manifest.yaml
tests/: README.md  test_public_surface.py
upstream_watch/: targets.yaml
(+2447 files in other folders)
