[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turingresearch-plus"
version = "1.5.0rc0"
description = "TuringResearch local-first research workflow engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "TuringResearch" }
]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27"
]

[project.scripts]
turingresearch-plus = "turing_research.mcp_server:main"
turingresearch-plus-mcp = "turing_research.mcp_server:main"
turingresearch-session = "turing_research_plus.session_runtime.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10"
]
pdf = [
  "pymupdf>=1.24"
]
mcp = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7"
]
all = [
  "pymupdf>=1.24",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "turing_research*",
  "turing_research_plus*",
  "turing_research_core*",
  "turing_research_paper*",
  "turing_research_artifact*",
  "turing_research_experiment*",
  "turing_research_dashboard*",
  "turing_research_plugins*",
  "turing_research_cases*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib -q -m 'not live and not manual'"
markers = [
  "unit: unit tests for local deterministic behavior",
  "contract: contract and release-surface tests",
  "workflow: dry-run and fake-service workflow tests",
  "integration_fake: integration-style tests that use fake services only",
  "live: tests requiring live network/API credentials; skipped by default",
  "manual: manual-only checks; skipped by default"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = [
  "turing_research",
  "turing_research_plus",
  "turing_research_core",
  "turing_research_paper",
  "turing_research_artifact",
  "turing_research_experiment",
  "turing_research_dashboard",
  "turing_research_plugins",
  "turing_research_cases"
]
plugins = ["pydantic.mypy"]
strict = false
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
