[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tulingresearch-plus"
version = "0.1.0"
description = "TuringResearch Plus MCP-first research workflow engine skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "TuringResearch" }
]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27"
]

[project.scripts]
turingresearch-plus = "turing_research.mcp_server:main"
turingresearch-plus-mcp = "turing_research.mcp_server:main"
tulingresearch-plus = "tuling_research.mcp_server:main"
tulingresearch-plus-mcp = "tuling_research.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10"
]
pdf = [
  "pymupdf>=1.24"
]
mcp = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7"
]
all = [
  "pymupdf>=1.24",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tuling_research*", "tuling_research_plus*", "turing_research*", "turing_research_plus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -m 'not live and not manual'"
markers = [
  "unit: unit tests for local deterministic behavior",
  "contract: contract and release-surface tests",
  "workflow: dry-run and fake-service workflow tests",
  "integration_fake: integration-style tests that use fake services only",
  "live: tests requiring live network/API credentials; skipped by default",
  "manual: manual-only checks; skipped by default"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["tuling_research", "tuling_research_plus", "turing_research", "turing_research_plus"]
plugins = ["pydantic.mypy"]
strict = false
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
